<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.UserLoginActivity">

    <LinearLayout
        android:id="@+id/logo_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:src="@drawable/canva_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.example.justdraw.widget.Segow_UI_Bold_Font
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Canva"
                android:textColor="@color/DarkBlue"
                android:textSize="28sp" />

            <com.example.justdraw.widget.Segow_UI_Bold_Font
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/JustDraw"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/internet_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_no_wifi_new" />

        <com.example.justdraw.widget.Segow_UI_Bold_Font
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/NoInternet"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.example.justdraw.widget.Segow_UI_Semi_Font
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/MakeSure"
            android:textColor="@color/text"
            android:textSize="14sp" />

        <Button
            android:id="@+id/retry_butt"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_round_button"
            android:text="@string/Retry"
            android:textAllCaps="true" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/mobile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="30dp">

            <com.example.justdraw.widget.Segow_UI_Bold_Font
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EnterMobile"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <com.example.justdraw.widget.Segow_UI_Font
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/VerificationCode"
                android:textColor="@color/light_black"
                android:textSize="12sp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/MobileNumber"
                android:layout_marginTop="20sp"
                android:padding="0dp"
                app:hintTextColor="@color/DarkBlue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>



            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp">

                <Button
                    android:id="@+id/login_butt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/white"
                    android:background="@drawable/round_button_background"
                    android:text="@string/Continue"
                    android:textAllCaps="false" />

            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>