<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.VerifyOtp">

    <LinearLayout
        android:id="@+id/logo_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/canva_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.example.justdraw.widget.Segow_UI_Bold_Font
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Canva"
                android:textColor="@color/DarkBlue"
                android:textSize="28sp" />

            <com.example.justdraw.widget.Segow_UI_Bold_Font
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/JustDraw"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/mobile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="30dp">


        <com.example.justdraw.widget.Segow_UI_Bold_Font
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EnterCode"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <com.example.justdraw.widget.Segow_UI_Font
            android:id="@+id/user_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/light_black"
            android:textSize="12sp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:hint="@string/OTP"
            android:padding="0dp"
            app:hintTextColor="@color/DarkBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/verify_butt"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/blue_round_button"
                android:text="@string/Verify"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:textAllCaps="false" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/mobile_layout"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>