<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment">

    <RelativeLayout
        android:id="@+id/pic_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/solid_square_button">
        <ImageView
            android:id="@+id/move_left"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@drawable/ic_left"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="10dp"
            android:layout_centerInParent="true"
            android:background="@drawable/white_circle"
            android:src="@drawable/ic_boy_new"/>
        <Button
            android:id="@+id/edit_profile"
            android:layout_width="130dp"
            android:layout_centerHorizontal="true"
            android:layout_height="40dp"
            android:background="@drawable/white_solid_button"
            android:layout_marginBottom="15dp"
            android:text="@string/editprofile"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_alignParentBottom="true"/>

        <com.example.justdraw.widget.Segow_UI_Bold_Font
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:padding="20dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/pic_layout"
        android:orientation="vertical">
        <com.example.justdraw.widget.Segow_UI_Bold_Font
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:text="Mohit Jangra"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/logout_alert"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="30sp"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@color/off_white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.justdraw.widget.Segow_UI_Bold_Font
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/Sure"/>
            <com.example.justdraw.widget.Segow_UI_Semi_Font
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_black"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:text="@string/LogoutDetails"/>

        </LinearLayout>

        <com.example.justdraw.widget.Segow_UI_Bold_Font
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/DarkBlue"
            android:padding="5dp"
            android:textSize="18sp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:text="@string/cancel"/>
        <com.example.justdraw.widget.Segow_UI_Bold_Font
            android:id="@+id/logout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/DarkBlue"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:text="@string/logout"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</RelativeLayout>