<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.LandingPageActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:scaleType="centerCrop"
        android:src="@drawable/backgound" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="30sp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <com.example.justdraw.widget.Segow_UI_Bold_Font
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StartMaking"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <Button
            android:id="@+id/mobile_cont_butt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/ContinueWithMobile"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:background="@drawable/round_button_background"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="@color/white"/>

            <com.example.justdraw.widget.Segow_UI_Bold_Font
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OR"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>
            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="@color/white"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/google"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_google_logo"/>
            <ImageView
                android:id="@+id/facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_facebook_logo"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>